Thu Feb  4 17:02:23 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * NEWS:

          Corrected spelling.

        * performance-tests/Bench/bin/mktable.pl:

          Renamed to allow for additional output formats.  Added HTML
          output option (unimplemented).

        * performance-tests/Bench/doc/tests-latency:

          Updated documentation.

        * performance-tests/Bench/tests/latency/test-commands:

          Moved from doc to tests/latency subdirectory.  Removed
          extraneous intermediate directory in data generation commands.

        * performance-tests/Bench/tools/convert-all:

          Removed extraneous intermediate directory.

        * performance-tests/Bench/bin/mktiddler.pl:
        * performance-tests/Bench/doc/latency-commands:

          Removed these files.  They were moved or renamed

Wed Feb  3 23:52:09 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * NEWS:

          Dropped release notes concerning reliable transport teardown.

        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:

          Dropped overflow checking for SequenceNumbers; these values are
          indistinguishable from valid, already seen numbers.

        * dds/DCPS/PublisherImpl.h:
        * dds/DCPS/PublisherImpl.cpp:
        * dds/DCPS/SubscriberImpl.h:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/DCPS/transport/framework/TransportInterface.h:
        * dds/DCPS/transport/framework/TransportInterface.cpp:
        * dds/DCPS/transport/multicast/BestEffortSession.h:
        * dds/DCPS/transport/multicast/BestEffortSession.cpp:
        * dds/DCPS/transport/multicast/MulticastDataLink.h: